--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.2",
+    "crypto-js": "^4.0.0",
     "http-server": "^0.12.3",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1"
